# zombies

./: .gitignore  CMakeLists.txt  CMakePresets.json  compile.bat  compile.sh  run.bat  run.sh  zombies.sln  zombies.vcxproj  zombies.vcxproj.filters
src/: main.cpp
working/: binary  config.koml
working/assets/shaders/: default.hlsl  shaders.koml
zombies/x64/Debug/: zombies.exe.recipe
zombies/x64/Debug/zombies.tlog/: zombies.lastbuildstate
